# simbio-paper

./: .gitignore  .nojekyll  Makefile  README.md  article.css  article.html  article.qmd  article.tex  bibliography.bib  bullet-points.md  environment.yml  index.html  oup-authoring-template.tex  pyproject.toml
.github/workflows/: publish.yml
final/: bibliography.bib  oup-authoring-template.tex  thin-figures.tex
latex/: figure1.tex  figure2.tex  figure3.tex  figure4.tex  figure5.tex  figure6.tex
reviewers/: 1.md  2.md
src/ide/: autocomplete.py  composition_tooltip.py  constant.py  ide1.py  ide2.py  type_error.py
src/performance/: models.txt  plot.py  test_results.py  timer.py  times.txt
src/performance/runners/: copasi.py  roadrunner.py  simbio.py
