[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "performance"
authors = [
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
dynamic = ["dependencies", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff]
extend-include = ["*.ipynb"]
select = ["E", "F", "I"]
